Add section advantages (html, css)

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,35 @@
                 <button class="button button_promo">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__price">
                     или
-                    <a href="№">ПЕРЕЙТИ В КАТАЛОГ</a>
+                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="advantages">
+        <div class="container">
+            <h2 class="advantages__header">НАШИ ПРЕИМУЩЕСТВА</h2>
+
+            <div class="advantages__items">
+
+                <div class="advantages__item">
+                    <img src="icon/advantages_cup.png" alt="cup">
+                    <div class="advantages__item-header">Делимся опытом</div>
+                    <div class="advantages__item-text">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+                </div>
+
+                <div class="advantages__item">
+                    <img src="icon/advantages_heart.png" alt="heart">
+                    <div class="advantages__item-header">Заботимся о здоровье</div>
+                    <div class="advantages__item-text">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+                </div>
+
+                <div class="advantages__item">
+                    <img src="icon/advantages_shoe.png" alt="shoe">
+                    <div class="advantages__item-header">Учим бегать</div>
+                    <div class="advantages__item-text">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в Xxxxxx - <a href="#">I love RUNNING.</a></div>
                 </div>
 
             </div>
