--- a/src/index.html
+++ b/src/index.html
@@ -91,5 +91,26 @@
         </div>
     </div>
 
+    <div class="consultation">
+        <div class="container">
+            <h2 class="consultation__title">Получите бесплатную консультацию <br>
+                 по подбору пульсометра 
+            </h2>
+            <div class="consultation__descr">Просто заполните форму заявки <br>
+                и мы перезвоним вам в течении 10 минут
+            </div>
+
+            <form action="" class="forms">
+                <input required name="name" placeholder="Ваше имя" type="text">
+                <input required name="phone" placeholder="Ваш телефон" type="tel">
+                <input required name="email" placeholder="Ваш email" type="email">
+
+                <!-- <input type="submit" value="Заказать консультацию" name=""> -->
+                <button class="button button_forms">заказать консультацию</button>
+
+            </form>
+        </div>
+    </div>
+
 </body>
 </html>
