--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,260 @@
         </div>
     </div>
 
+    <div class="catalog">
+        <div class="container">
+            <h2 class="catalog__title">Каталог пульсометров</h2>
+            <ul class="catalog__tabs">
+                <li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li>
+                <li class="catalog__tab"><div>для бега</div></li>
+                <li class="catalog__tab"><div>для триатлона</div></li>
+            </ul>
+            <div class="catalog__items catalog__items_active">
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__item-content catalog__item-content_active">
+                            <img src="img/product_img.png" alt="product" class="catalog__item-img">
+                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__item-link">подробнее</a>
+                        </div>
+                        <ul class="catalog__item-list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__item-back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__item-footer">
+                        <div class="catalog__item-prices">
+                            <div class="catalog__item-old">4 750 грн.</div>
+                            <div class="catalog__item-price">4 500 грн.</div>
+                        </div>
+                        <button class="button button_catalog">купить</button>
+                    </div>
+                </div>
+
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__item-content catalog__item-content_active">
+                            <img src="img/product_img.png" alt="product" class="catalog__item-img">
+                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__item-link">подробнее</a>
+                        </div>
+                        <ul class="catalog__item-list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__item-back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__item-footer">
+                        <div class="catalog__item-prices">
+                            <div class="catalog__item-old">4 750 грн.</div>
+                            <div class="catalog__item-price">4 500 грн.</div>
+                        </div>
+                        <button class="button button_catalog">купить</button>
+                    </div>
+                </div>
+
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__item-content catalog__item-content_active">
+                            <img src="img/product_img.png" alt="product" class="catalog__item-img">
+                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__item-link">подробнее</a>
+                        </div>
+                        <ul class="catalog__item-list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__item-back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__item-footer">
+                        <div class="catalog__item-prices">
+                            <div class="catalog__item-old">4 750 грн.</div>
+                            <div class="catalog__item-price">4 500 грн.</div>
+                        </div>
+                        <button class="button button_catalog">купить</button>
+                    </div>
+                </div>
+
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__item-content catalog__item-content_active">
+                            <img src="img/product_img.png" alt="product" class="catalog__item-img">
+                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__item-link">подробнее</a>
+                        </div>
+                        <ul class="catalog__item-list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__item-back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__item-footer">
+                        <div class="catalog__item-prices">
+                            <div class="catalog__item-old">4 750 грн.</div>
+                            <div class="catalog__item-price">4 500 грн.</div>
+                        </div>
+                        <button class="button button_catalog">купить</button>
+                    </div>
+                </div>
+
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__item-content catalog__item-content_active">
+                            <img src="img/product_img.png" alt="product" class="catalog__item-img">
+                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__item-link">подробнее</a>
+                        </div>
+                        <ul class="catalog__item-list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__item-back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__item-footer">
+                        <div class="catalog__item-prices">
+                            <div class="catalog__item-old">4 750 грн.</div>
+                            <div class="catalog__item-price">4 500 грн.</div>
+                        </div>
+                        <button class="button button_catalog">купить</button>
+                    </div>
+                </div>
+
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__item-content catalog__item-content_active">
+                            <img src="img/product_img.png" alt="product" class="catalog__item-img">
+                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__item-link">подробнее</a>
+                        </div>
+                        <ul class="catalog__item-list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__item-back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__item-footer">
+                        <div class="catalog__item-prices">
+                            <div class="catalog__item-old">4 750 грн.</div>
+                            <div class="catalog__item-price">4 500 грн.</div>
+                        </div>
+                        <button class="button button_catalog">купить</button>
+                    </div>
+                </div>
+
+            </div> 
+            
+            <div class="catalog__items">
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__item-content catalog__item-content_active">
+                            <img src="img/product_img.png" alt="product" class="catalog__item-img">
+                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__item-link">подробнее</a>
+                        </div>
+                        <ul class="catalog__item-list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__item-back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__item-footer">
+                        <div class="catalog__item-prices">
+                            <div class="catalog__item-old">4 750 грн.</div>
+                            <div class="catalog__item-price">4 500 грн.</div>
+                        </div>
+                        <button class="button button_catalog">купить</button>
+                    </div>
+                </div>
+
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__item-content catalog__item-content_active">
+                            <img src="img/product_img.png" alt="product" class="catalog__item-img">
+                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__item-link">подробнее</a>
+                        </div>
+                        <ul class="catalog__item-list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__item-back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__item-footer">
+                        <div class="catalog__item-prices">
+                            <div class="catalog__item-old">4 750 грн.</div>
+                            <div class="catalog__item-price">4 500 грн.</div>
+                        </div>
+                        <button class="button button_catalog">купить</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="catalog__items">
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__item-content catalog__item-content_active">
+                            <img src="img/product_img.png" alt="product" class="catalog__item-img">
+                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__item-link">подробнее</a>
+                        </div>
+                        <ul class="catalog__item-list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__item-back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__item-footer">
+                        <div class="catalog__item-prices">
+                            <div class="catalog__item-old">4 750 грн.</div>
+                            <div class="catalog__item-price">4 500 грн.</div>
+                        </div>
+                        <button class="button button_catalog">купить</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+
 
 
     <script type="text/javascript" src="https:code.jquery.com/jquery-1.11.0.min.js"></script>
