--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
                 <div class="header__contacts">
                     <a href="tel:+389876543210">+38 (987) 654-32-10</a>
-                    <button class="button">заказать звонок</button>
+                    <button data-modal="consult" class="button">заказать звонок</button>
                 </div>
             </div>
 
@@ -54,7 +54,7 @@
                     </div>
                 </div>
 
-                <button class="button button_promo">заказать кОНСУЛЬТАЦИЮ</button>
+                <button data-modal="consult" class="button button_promo">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__price">
                     или
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -136,7 +136,7 @@
                     <div class="catalog__item-wrapper">
                         <div class="catalog__item-content catalog__item-content_active">
                             <img src="img/product_img.png" alt="product" class="catalog__item-img">
-                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-title">Пульсометр Polar FT1_1</div>
                             <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="" class="catalog__item-link">подробнее</a>
                         </div>
@@ -162,7 +162,7 @@
                     <div class="catalog__item-wrapper">
                         <div class="catalog__item-content catalog__item-content_active">
                             <img src="img/product_img.png" alt="product" class="catalog__item-img">
-                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-title">Пульсометр Polar FT1_2</div>
                             <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="" class="catalog__item-link">подробнее</a>
                         </div>
@@ -188,7 +188,7 @@
                     <div class="catalog__item-wrapper">
                         <div class="catalog__item-content catalog__item-content_active">
                             <img src="img/product_img.png" alt="product" class="catalog__item-img">
-                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-title">Пульсометр Polar FT1_3</div>
                             <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="" class="catalog__item-link">подробнее</a>
                         </div>
@@ -214,7 +214,7 @@
                     <div class="catalog__item-wrapper">
                         <div class="catalog__item-content catalog__item-content_active">
                             <img src="img/product_img.png" alt="product" class="catalog__item-img">
-                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-title">Пульсометр Polar FT1_4</div>
                             <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="" class="catalog__item-link">подробнее</a>
                         </div>
@@ -240,7 +240,7 @@
                     <div class="catalog__item-wrapper">
                         <div class="catalog__item-content catalog__item-content_active">
                             <img src="img/product_img.png" alt="product" class="catalog__item-img">
-                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-title">Пульсометр Polar FT1_5</div>
                             <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="" class="catalog__item-link">подробнее</a>
                         </div>
@@ -266,7 +266,7 @@
                     <div class="catalog__item-wrapper">
                         <div class="catalog__item-content catalog__item-content_active">
                             <img src="img/product_img.png" alt="product" class="catalog__item-img">
-                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-title">Пульсометр Polar FT1_6</div>
                             <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="" class="catalog__item-link">подробнее</a>
                         </div>
@@ -295,7 +295,7 @@
                     <div class="catalog__item-wrapper">
                         <div class="catalog__item-content catalog__item-content_active">
                             <img src="img/product_img.png" alt="product" class="catalog__item-img">
-                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-title">Пульсометр Polar AA1_1</div>
                             <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="" class="catalog__item-link">подробнее</a>
                         </div>
@@ -321,7 +321,59 @@
                     <div class="catalog__item-wrapper">
                         <div class="catalog__item-content catalog__item-content_active">
                             <img src="img/product_img.png" alt="product" class="catalog__item-img">
-                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-title">Пульсометр Polar AA1_2</div>
+                            <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__item-link">подробнее</a>
+                        </div>
+                        <ul class="catalog__item-list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__item-back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__item-footer">
+                        <div class="catalog__item-prices">
+                            <div class="catalog__item-old">4 750 грн.</div>
+                            <div class="catalog__item-price">4 500 грн.</div>
+                        </div>
+                        <button class="button button_catalog">купить</button>
+                    </div>
+                </div>
+
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__item-content catalog__item-content_active">
+                            <img src="img/product_img.png" alt="product" class="catalog__item-img">
+                            <div class="catalog__item-title">Пульсометр Polar AA1_3</div>
+                            <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="" class="catalog__item-link">подробнее</a>
+                        </div>
+                        <ul class="catalog__item-list">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalog__item-back">назад</a>
+                        </ul>
+                    </div>
+                    <hr>
+                    <div class="catalog__item-footer">
+                        <div class="catalog__item-prices">
+                            <div class="catalog__item-old">4 750 грн.</div>
+                            <div class="catalog__item-price">4 500 грн.</div>
+                        </div>
+                        <button class="button button_catalog">купить</button>
+                    </div>
+                </div>
+
+                <div class="catalog__item">
+                    <div class="catalog__item-wrapper">
+                        <div class="catalog__item-content catalog__item-content_active">
+                            <img src="img/product_img.png" alt="product" class="catalog__item-img">
+                            <div class="catalog__item-title">Пульсометр Polar AA1_4</div>
                             <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="" class="catalog__item-link">подробнее</a>
                         </div>
@@ -349,7 +401,7 @@
                     <div class="catalog__item-wrapper">
                         <div class="catalog__item-content catalog__item-content_active">
                             <img src="img/product_img.png" alt="product" class="catalog__item-img">
-                            <div class="catalog__item-title">Пульсометр Polar FT1</div>
+                            <div class="catalog__item-title">Пульсометр Polar KK1_1</div>
                             <div class="catalog__item-text">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="" class="catalog__item-link">подробнее</a>
                         </div>
@@ -375,9 +427,101 @@
         </div>
     </div>
 
+    <div class="feedback">
+        <div class="container">
+            <h2 class="feedback__title">отзывы клиентов</h2>
+            <div class="feedback__item">
+                <div class="feedback__img">
+                    <img src="img/feedback_1.png" alt="">
+                </div>
+                <div class="feedback__info">
+                    <div class="feedback__info-title">Ирина Иванченко</div>
+                    <div class="feedback__info-marafon">2 полумарафона</div>
+                    <p>Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.</p>
+                    <p>Новые цели - новый гаджет!</p>
+                    <p>Спасибо, RunSmart! </p>
+                </div>
+            </div>
 
+            <div class="feedback__item">
+                <div class="feedback__img">
+                    <img src="img/feedback_2.png" alt="">
+                </div>
+                <div class="feedback__info">
+                    <div class="feedback__info-title">Иван Сёмочкин</div>
+                    <div class="feedback__info-marafon">1 полумарафона</div>
+                    <p>Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. </p>
+                    <p>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.</p>
+                    <p>С ними подготовился к своему первому полумарафону! Спасибо!!!</p>
+                </div>
+            </div>
 
+            <div class="feedback__item">
+                <div class="feedback__img">
+                    <img src="img/feedback_3.png" alt="">
+                </div>
+                <div class="feedback__info">
+                    <div class="feedback__info-title">Юлия Дашкина</div>
+                    <div class="feedback__info-marafon">4 полумарафона</div>
+                    <p>Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.</p>
+                    <p>Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!</p>
+                    <p>Спасибо!!!</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <footer class="footer">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d904.309866520521!2d30.771460118021807!3d50.12794044465924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d49176e4226e59%3A0x374de652660d3b21!2z0KDQuNCx0LDRh9C-0Lo!5e0!3m2!1suk!2sua!4v1658413843899!5m2!1suk!2sua" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <div class="footer__info">
+            <address class="footer__address">Риболовецька, Трипілля, Київська обл.</address>
+            <a class="footer__tel" href="tel:+389876543210">+38 (987) 654-32-10</a>
+            <div class="footer__social">
+                <div class="footer__social-item"><img src="icon/facebook.svg" alt="facebook"></div>
+                <div class="footer__social-item"><img src="icon/instagram.svg" alt="insta"></div>
+                <div class="footer__social-item"><img src="icon/pinterest.svg" alt="pinterest"></div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- При співвідношені сторін відео 16:9 -- рахуєм процент (9х100/16 = 56.25%;) і пишим в padding-top -->
+    <div class="youtube">
+        <div class="youtube__ration"></div>
+        <iframe class="youtube__cont" src="https://www.youtube.com/embed/NVnx2nI2NkI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <div class="layer-modal">
+        <div class="modal" id="consult">
+            <div class="modal__close">&#10006;</div>
+            <div class="modal__title">Просто заполните форму заявки</div>
+            <div class="modal__text">и мы перезвоним вам в течении 10 минут</div>
+            <form action="#" class="modal__form">
+                <input required type="text" placeholder="Ваше имя">
+                <input required type="tel" placeholder="Ваш телефон">
+                <input required type="email" placeholder="Ваш E-mail">
+                <button class="modal__form-button">заказать консультацию</button>
+            </form>
+        </div>
+
+        <div class="modal" id="order">
+            <div class="modal__close">&#10006;</div>
+            <div class="modal__title">Ваш заказ:</div>
+            <div class="modal__text">Пульсометр Polar FT1</div>
+            <form action="#" class="modal__form">
+                <input required type="text" placeholder="Ваше имя">
+                <input required type="tel" placeholder="Ваш телефон">
+                <input required type="email" placeholder="Ваш E-mail">
+                <button class="modal__form-button">купить</button>
+            </form>
+        </div>
+
+        <div class="modal" id="answer">
+            <div class="modal__close">&#10006;</div>
+            <div class="modal__title">Спасибо за вашу заявку!</div>
+            <div class="modal__text">и мы перезвоним вам в течении 10 минут</div>
+        </div>
+    </div>
 
     <script type="text/javascript" src="https:code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https:code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
