add smooth scroll and pageup

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="promo">
+    <div class="promo" id="up">
         <div class="container">
             <div class="header">
                 <a href="" class="header__logo">
@@ -28,7 +28,7 @@
                     <a href="tel:+389876543210">+38 (987) 654-32-10</a>
                     <button data-modal="consult" class="button">заказать звонок</button>
                 </div>
-            </div>
+            </div> 
 
             <div class="promo__wrapper">
                 <h1 class="promo__header">Подбор пульсометра</h1>
@@ -522,6 +522,10 @@
             <div class="modal__text">и мы перезвоним вам в течении 10 минут</div>
         </div>
     </div>
+
+    <a href="#up" class="pageup">
+        <img src="icon/circle-chevron-up-solid.svg" alt="up">
+    </a>
 
     <script type="text/javascript" src="https:code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https:code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
